[package]
name = "gpu-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "0.19"
image = { version = "0.24", features = ["gif"] }
gif = "0.12"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
futures-util = "0.3"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
num_cpus = "1.0"
uuid = { version = "1.6", features = ["v4"] }
transformations = { path = "transformations" }

[dev-dependencies]
actix-web = { version = "4.4" }
bytes = "1.5"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["multipart", "tokio-native-tls"] }

[[bench]]
name = "gif_processing"
harness = false
